showfax *, showwebsite *, showaddress *, showroom *, showdescription *, showlist, showsidebar, showthumb, showpubs, showoffice, showlink, extended (fasst alle Parameter mit * zusammen, so dass nur extended=1 angegeben werden muss)
- format = full (Anzeige wie bei einer Kontakt-Einzelseite)


Versionsänderungen:
===================
####Version 2.1.19:     
- Ergänzung lecturetyp es = Examensseminar             

####Version 2.1.18:     
- Bugfix #178: fehlender Name auf Kontakt-Einzelseite korrigiert       
- Formatierung Content-Ausgabe optimiert      
- Bugfixes Format page    

####Version 2.1.17:     
- Bugfix #152: Erweiterung von format="liste", kommasepariert kann die Anzeige von Telefonnummer und/oder Mailadresse über die show-Parameter telefon und/oder mail ergänzt werden    
- Enhancement #169: Format-Klassen ergänzt, für liste class="list", für sidebar class="side", für page class="page"    

####Version 2.1.16:     
- Nochmal Bugfix #170: Doppelte Inhaltsausgabe bei format=page auch für Ausgabe der Kategorie    
- Überschrift bei format="page": Standardmäßig wird auf Ausgabe des Namens bzw. (wenn nicht dieser nicht vorhanden ist) Titels verzichtet, optional aber über show="name" anzeigbar    
- Bugfix #155: Fehlerhafte Anzeige von Raum und Adresse    
- Bei schmaler Sidebar wird das Bild nicht mehr über, sondern nach dem Namen angezeigt    

####Version 2.1.15:     
- Bugfix #170: Doppelte Inhaltsausgabe bei format=page    

####Version 2.1.14:
- Shortcodes in Description bei Page Ausgabe erlaubt

####Version 2.1.13:

- Bugfix #159: Leere Zwischenüberschrift in Sidebar
- Bei Sprechzeitenausgabe wird Content in div anstelle span ausgegeben, da sonst invalides HTML
- Bild in widget nun parametrisierbar über Parameter bild. 
   Default in FAU-Einrichtungen: Bild in kleiner Inline-Sidebar = 0. 

####Version 2.1.12:

- Bugfix #157 bei der Anzeige der Personenseite:
  Kontaktpersonen besser formatiert.
- Bugfix #153 bei Anzeige von Kontakten ohne Bild
  
    