@@ -24,20 +24,27 @@ class Dicts {
         "jur." => "Recht",
         "rer." => ""
     );
+    
+    // Reihenfolge wichtig, da sonst Mehrfachersetzung von z.B. sem
     public static $lecturetypen = array(
         "awa" => "Anleitung zu wiss. Arbeiten  (AWA)",
         "ag" => "Arbeitsgemeinschaft  (AG)",
         "ak" => "Aufbaukurs  (AK)",
         "ek" => "Einf&uuml;hrungskurs  (EK)",
-        "es" => "Examensseminar (ES)",
         "ex" => "Exkursion  (EX)",
         "gk" => "Grundkurs  (GK)",
-        "ts" => "Theorieseminar  (TS)",
         "sem" => "Seminar  (SEM)",
+        "ts" => "Theorieseminar  (TS)",
+        "es" => "Examensseminar  (ES)",
+        "mas" => "MA-Seminar  (MAS)", 
+        "as" => "Aufbauseminar  (AS)",
+        "gs" => "Grundseminar  (GS)",
         "hs" => "Hauptseminar  (HS)",
+        "re" => "Repetitorium  (RE)",
         "kk" => "Klausurenkurs  (KK)",
         "klv" => "Klinische Visite  (KLV)",
         "ko" => "Kolloquium  (KO)",
+        "ks" => "Kombiseminar  (KS)",
         "ku" => "Kurs  (KU)",
         "ms" => "Mittelseminar  (MS)",
         "os" => "Oberseminar  (OS)",
@@ -45,12 +52,11 @@ class Dicts {
         "prs" => "Praxisseminar  (PRS)",
         "pjs" => "Projektseminar  (PJS)",
         "ps" => "Proseminar  (PS)",
-        "re" => "Repetitorium  (RE)",
         "sl" => "Sonstige Lehrveranstaltung  (SL)",
         "tut" => "Tutorium  (TUT)",
-        "ue" => "Übung  (UE)",
-        "vorl" => "Vorlesung  (VORL)",
         "v-ue" => "Vorlesung mit &Uuml;bung  (V/UE)",
+        "ue" => "&Uuml;bung  (UE)",
+        "vorl" => "Vorlesung  (VORL)",
         "hvl" => "Hauptvorlesung  (HVL)",
         "pf" => "Pr&uuml;fung  (PF)",
         "gsz" => "Gremiensitzung  (GSZ)"
@@ -60,15 +66,20 @@ class Dicts {
         "ag" => "Arbeitsgemeinschaft",
         "ak" => "Aufbaukurs",
         "ek" => "Einf&uuml;hrungskurs",
-        "es" => "Examensseminar",
         "ex" => "Exkursion",
         "gk" => "Grundkurs",
-        "ts" => "Theorieseminar",
         "sem" => "Seminar",
+        "ts" => "Theorieseminar",
+        "es" => "Examensseminar",
+        "mas" => "Masterseminar",
+        "as" => "Aufbauseminar",
+        "gs" => "Grundseminar",
         "hs" => "Hauptseminar",
+        "re" => "Repetitorium",
         "kk" => "Klausurenkurs",
         "klv" => "Klinische Visite",
         "ko" => "Kolloquium",
+        "ks" => "Kombiseminar",
         "ku" => "Kurs",
         "ms" => "Mittelseminar",
         "os" => "Oberseminar",
@@ -76,12 +87,11 @@ class Dicts {
         "prs" => "Praxisseminar",
         "pjs" => "Projektseminar",
         "ps" => "Proseminar",
-        "re" => "Repetitorium",
         "sl" => "Sonstige Lehrveranstaltung",
         "tut" => "Tutorium",
-        "ue" => "Übung",
-        "vorl" => "Vorlesung",
         "v-ue" => "Vorlesung mit &Uuml;bung",
+        "ue" => "&Uuml;bung",
+        "vorl" => "Vorlesung",
         "hvl" => "Hauptvorlesung",
         "pf" => "Pr&uuml;fung",
         "gsz" => "Gremiensitzung"
