@@ -19,7 +19,8 @@ showfax *, showwebsite *, showaddress *, showroom *, showdescription *, showlist
 Versionsänderungen:
 ===================
 ####Version 2.1.19:     
-- Ergänzung lecturetyp es = Examensseminar             
+- Ergänzung von lecturetypen ES (Examensseminar), KS (Kombiseminar), MAS (Masterseminar), GS (Grundseminar), AS (Aufbauseminar)                 
+
 
 ####Version 2.1.18:     
 - Bugfix #178: fehlender Name auf Kontakt-Einzelseite korrigiert       
